--- a/index.html
+++ b/index.html
@@ -1,49 +1,20 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Simple-asteroids by mclaros</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <title>index</title>
+  <script src="keymaster.min.js"></script>
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/mclaros/Simple-Asteroids">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/mclaros/Simple-Asteroids/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/mclaros/Simple-Asteroids/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+  <script src="moving_object.js"></script>
+  <script src="asteroid.js"></script>
+  <script src="bullet.js"></script>
+  <script src="particle.js"></script>
+  <script src="ship.js"></script>
+  <script src="game.js"></script>
+</head>
 
-    <div class="wrapper">
+<body id="index" onload="Game.start(900,900);">
+  <canvas id="game" width="900" height="900"></canvas>
+</body>
 
-      <section>
-        <div id="title">
-          <h1>Simple-asteroids</h1>
-          <p>A simple version of Asteroids written in JavaScript, using Canvas</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/mclaros">mclaros</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
-        <h3>
-<a name="welcome-to-asteroids" class="anchor" href="#welcome-to-asteroids"><span class="octicon octicon-link"></span></a>Welcome to Asteroids</h3>
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
 </html>
