--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
-<!doctype html>
 <html>
 <head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <title>index</title>
-  <script src="keymaster.min.js"></script>
 
-  <script src="moving_object.js"></script>
-  <script src="asteroid.js"></script>
-  <script src="bullet.js"></script>
-  <script src="particle.js"></script>
-  <script src="ship.js"></script>
-  <script src="game.js"></script>
+  <script src="javascripts/keymaster.min.js"></script>
+  <script src="javascripts/moving_object.js"></script>
+  <script src="javascripts/asteroid.js"></script>
+  <script src="javascripts/bullet.js"></script>
+  <script src="javascripts/particle.js"></script>
+  <script src="javascripts/ship.js"></script>
+  <script src="javascripts/game.js"></script>
 </head>
 
 <body id="index" onload="Game.start(900,900);">
   <canvas id="game" width="900" height="900"></canvas>
 </body>
-
 </html>
